--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   "dependencies": {
     "@aws-amplify/ui-react": "^6.11.0",
     "aws-amplify": "^6.14.2",
+    "country-state-city": "^3.2.1",
     "framer-motion": "^12.7.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
+    "react-phone-input-2": "^2.15.1",
     "react-router-dom": "^7.5.0"
   },
   "devDependencies": {
