--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "@aws-amplify/ui-react": "^6.11.0",
-    "aws-amplify": "^6.14.2",
+    "@aws-amplify/ui-react-storage": "^3.11.0",
+    "aws-amplify": "^6.15.1",
     "country-state-city": "^3.2.1",
     "framer-motion": "^12.7.4",
     "react": "^19.0.0",
