--- a/package.json
+++ b/package.json
@@ -15,15 +15,12 @@
     "aws-amplify": "^6.15.1",
     "country-state-city": "^3.2.1",
     "framer-motion": "^12.7.4",
-    "lucide-react": "^0.540.0",
     "react": "^18.2.0",
-    "react-confetti": "^6.4.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.5.0",
     "react-loading-indicators": "^1.0.0",
     "react-phone-input-2": "^2.15.1",
-    "react-router-dom": "^7.5.0",
-    "use-sound": "^5.0.0"
+    "react-router-dom": "^7.5.0"
   },
   "devDependencies": {
     "@aws-amplify/backend": "^1.14.3",
