--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "aws-amplify": "^6.15.5",
     "country-state-city": "^3.2.1",
     "framer-motion": "^12.7.4",
+    "ogl": "^1.0.11",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.5.0",
